# tree-sitter-seq

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-seq.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_seq/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSeq/: seq.h
bindings/swift/TreeSitterSeqTests/: TreeSitterSeqTests.swift
examples/: test1.fastq  test2.fastq
queries/: indent.scm
src/: grammar.json  node-types.json  parser.c
