[package]
name = "tree-sitter-seq"
description = "Tree-sitter grammar for biological sequence formats (FASTA, FASTQ)"
version = "0.1.0"
authors = ["Sebastian Hyland <st.hyland05@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "seq"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/seb-hyland/tree-sitter-seq"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.5"
